@@ -5,9 +5,12 @@ This file is referred by the automatic release script.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+# x-engine 1.1.6 2024/6/12
+* Windows用インストーラのエクスポートを削除
+<!-- END-LATEST-JP -->
+
 # x-engine 1.1.5 2024/6/11
 * iOSエクスポートで動画をコピーするように改善
-<!-- END-LATEST-JP -->
 
 # x-engine 1.1.4 2024/6/10
 * Updated the English template
